--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "tutorial",
+  "name": "new",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.3",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "start": "astro dev",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/preact": "^4.0.0",
-    "@astrojs/rss": "^4.0.10",
-    "astro": "^5.1.0",
-    "preact": "^10.25.3"
+    "@astrojs/check": "^0.9.3",
+    "@astrojs/mdx": "^3.1.7",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.15.1",
+    "astro-icon": "^1.1.1",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
