--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.6",
     "astro-icon": "^1.1.1",
