--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/tailwind": "^5.1.4",
+    "@microflash/remark-callout-directives": "^4.3.2",
     "astro": "^5.1.6",
     "astro-icon": "^1.1.1",
+    "remark-directive": "^3.0.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
