--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/tailwind": "^5.1.4",
     "@microflash/remark-callout-directives": "^4.3.2",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "astro": "^5.1.6",
     "astro-icon": "^1.1.1",
+    "framer-motion": "^12.4.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "remark-directive": "^3.0.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
