--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "astro": "^5.5.6",
     "astro-icon": "^1.1.1",
     "framer-motion": "^12.4.1",
-    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "remark-directive": "^3.0.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
