--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test:visual": "playwright test",
+    "test:visual:ui": "playwright test --ui",
+    "test:visual:update": "playwright test --update-snapshots"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -29,6 +32,7 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/typography": "^0.5.15",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
