--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "test:visual:update": "playwright test --update-snapshots"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.2.3",
-    "@astrojs/react": "^4.2.3",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/check": "^0.9.5",
+    "@astrojs/mdx": "^4.3.10",
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/rss": "^4.0.13",
     "@microflash/remark-callout-directives": "^4.3.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "astro": "^5.5.6",
+    "astro": "^5.15.4",
     "astro-icon": "^1.1.1",
     "framer-motion": "^12.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "remark-directive": "^3.0.0",
-    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.1.17",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11"
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.17"
   }
 }
